--- a/public/style.css
+++ b/public/style.css
@@ -36,21 +36,12 @@ body, html {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-
-
 .welcome-content h1 {
     font-size: 2em;
     margin-bottom: 20px;
     color: white; /* Asegura que el texto sea visible sobre el fondo oscuro */
 }
 
-.main-image {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 20px;
-}
-
-/* Ajustes para centrar el botón en la posición deseada */
 .enter-btn {
     position: absolute;
     top: 120%; /* Mueve el botón más abajo, ajusta este valor según lo que necesites */
@@ -65,16 +56,20 @@ body, html {
     transition: background-color 0.3s;
 }
 
-
 .enter-btn:hover {
     background-color: var(--hover-color);
 }
 
-/* Ocultar inicialmente la página del museo */
+/* Contenedor principal */
 .container {
     display: none;
     max-width: 1200px;
     margin: auto;
+}
+
+h1 {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 /* Estilos generales para la página principal */
@@ -83,7 +78,6 @@ body, html {
     text-align: center;
 }
 
-/* Estilos para los filtros */
 .filters {
     margin-bottom: 20px;
     background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(0, 0, 0, 0.5));
@@ -105,13 +99,42 @@ select, input {
     border: 1px solid #ccc;
 }
 
-/* Estilos para los botones */
+/* Alinear el checkbox y la etiqueta en la misma línea y reducir espacio */
+.checkbox-label {
+    display: inline-flex; /* Alinea el checkbox y el texto en una sola línea */
+    align-items: center; /* Alinea verticalmente el checkbox con el texto */
+    margin-right: 5px; /* Ajusta el espacio entre el label y el checkbox */
+}
+
+input[type="checkbox"] {
+    margin-right: 5px; /* Ajusta el espacio entre el checkbox y el texto */
+    vertical-align: middle; /* Asegura que el checkbox se alinee con el texto */
+}
+
+/* Estilo para los botones de filtros centrados */
+.filter-buttons {
+    display: flex;
+    justify-content: center; /* Centra los botones */
+    margin-top: 20px; /* Mueve los botones más abajo */
+    gap: 10px; /* Espacio entre botones */
+}
+
+/* Colocar label de Localización y su input en una fila */
+.location-container {
+    display: flex;
+    flex-direction: row; /* Alinea label e input en la misma fila */
+    align-items: center; /* Alinea el input con el label */
+    gap: 10px; /* Espacio entre label y el input */
+    margin-top: 10px; /* Añade espacio respecto a los otros filtros */
+}
+
+/* Botones generales */
 button {
-    padding: 10px 20px;
-    margin: 5px;
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none;
     background-color: var(--primary-color);
     color: white;
-    border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
@@ -123,11 +146,6 @@ button:hover {
 
 .pagination button:disabled {
     background-color: var(--disabled-color);
-}
-
-h1 {
-    text-align: center;
-    margin-bottom: 20px;
 }
 
 /* Grid para mostrar las obras de arte */
@@ -160,6 +178,32 @@ h1 {
     margin-top: 20px;
     font-size: 1.2em;
     color: var(--primary-color);
+}
+
+/* Paginación */
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.pagination button {
+    padding: 10px 15px;
+    font-size: 16px;
+    border: none;
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 0 5px;
+}
+
+.pagination button:disabled {
+    background-color: var(--disabled-color);
+}
+
+.pagination button:hover:enabled {
+    background-color: var(--hover-color);
 }
 
 /* Estilos para el modal */
@@ -212,7 +256,6 @@ h1 {
     cursor: pointer;
 }
 
-/* Estilos para el botón de ver más */
 .view-more {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     background-color: var(--primary-color);
@@ -230,7 +273,6 @@ h1 {
     cursor: pointer;
 }
 
-/* Media queries para dispositivos más pequeños */
 @media (max-width: 768px) {
     .filters {
         background-size: cover;
